# repose

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/compose-core/: Cargo.toml
crates/compose-core/src/: animation.rs  color.rs  effects.rs  error.rs  geometry.rs  lib.rs  locals.rs  modifier.rs  prelude.rs  render_api.rs  runtime.rs  scope.rs  semantics.rs  signal.rs  tests.rs  view.rs
crates/compose-devtools/: Cargo.toml
crates/compose-devtools/src/: lib.rs
crates/compose-macros/: Cargo.toml
crates/compose-platform/: Cargo.toml
crates/compose-platform/src/: lib.rs
crates/compose-render-wgpu/: Cargo.toml
crates/compose-render-wgpu/src/: lib.rs
crates/compose-render-wgpu/src/shaders/: rect.wgsl  text.wgsl  text_color.wgsl
crates/compose-text/: Cargo.toml
crates/compose-ui/: Cargo.toml
crates/compose-ui/src/: anim.rs  lazy.rs  lib.rs  textfield.rs
crates/repose-canvas/: Cargo.toml
crates/repose-canvas/src/: lib.rs
crates/repose-core/: Cargo.toml
crates/repose-core/src/: animation.rs  color.rs  effects.rs  effects_ext.rs  input.rs  lib.rs  locals.rs  modifier.rs  prelude.rs  reactive.rs  render_api.rs  runtime.rs  scope.rs  semantics.rs  signal.rs  state.rs  tests.rs  view.rs
crates/repose-devtools/: Cargo.toml
crates/repose-devtools/src/: lib.rs
crates/repose-macros/: Cargo.toml
crates/repose-macros/src/: lib.rs
crates/repose-material/: Cargo.toml
crates/repose-material/src/: lib.rs
crates/repose-material/src/material3/: mod.rs
crates/repose-navigation/: Cargo.toml
crates/repose-navigation/src/: lib.rs
crates/repose-platform/: Cargo.toml
crates/repose-platform/src/: android.rs  common.rs  lib.rs  web.rs
crates/repose-render-wgpu/: Cargo.toml
crates/repose-render-wgpu/src/: lib.rs
crates/repose-render-wgpu/src/shaders/: border.wgsl  ellipse.wgsl  ellipse_border.wgsl  rect.wgsl  text.wgsl
crates/repose-text/: Cargo.toml
crates/repose-text/src/: lib.rs
crates/repose-ui/: Cargo.toml
crates/repose-ui/src/: anim.rs  anim_ext.rs  canvas.rs  gestures.rs  lazy.rs  lib.rs  navigation.rs  scroll.rs  textfield.rs
crates/repose-ui/src/material3/: components.rs
examples/android_counter/: Cargo.toml
examples/android_counter/src/: lib.rs
examples/animation_demo/: Cargo.toml
examples/animation_demo/src/: main.rs
examples/desktop_counter/: Cargo.toml
examples/desktop_counter/src/: main.rs
examples/lazy_list/: Cargo.toml
examples/lazy_list/src/: main.rs
examples/showcase/: Cargo.toml  index.html
examples/showcase/src/: app.rs  lib.rs  main.rs  ui.rs  web.rs
examples/showcase/src/pages/: animation.rs  canvas.rs  errors.rs  home.rs  layout.rs  lists.rs  mod.rs  scroll.rs  scrolls.rs  text.rs  widgets.rs
examples/textfield_ime/: Cargo.toml
examples/textfield_ime/src/: main.rs
