[workspace]
members = [
  "crates/compose-core",
  "crates/compose-ui",
  "crates/compose-render-wgpu",
  "crates/compose-platform",
  "crates/compose-devtools",
  "crates/compose-macros",
  "examples/desktop_counter",
  "examples/textfield_ime",
  "examples/lazy_list",
  "examples/animation_demo",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
smallvec = "1"
slotmap = "1"
bitflags = "2"
unicode-segmentation = "1.12"
arboard = "3.6"


# Layout
taffy = { version = "0.9.1", default-features = true }

# Platform + GPU
winit = { version = "0.30.12", default-features = true }
wgpu = "27.0.1"
pollster = "0.4.0"

# Text
ab_glyph = "0.2.31"
fontdb = "0.23.0"
