[workspace]
members = [
  "crates/repose-core",
  "crates/repose-ui",
  "crates/repose-render-wgpu",
  "crates/repose-platform",
  "crates/repose-devtools",
  "crates/repose-macros",
  "crates/repose-text",
  "crates/repose-canvas",
  "crates/repose-material",
  "crates/repose-navigation",
  "examples/showcase",
  "examples/animation_demo",
  "examples/android_counter",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/mlm-games/repose"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
smallvec = "1"
slotmap = "1"
bitflags = "2"
unicode-segmentation = "1.12"
arboard = { version = "3.6", features = ["wayland-data-control"] }


# Layout
taffy = { version = "0.9.1", default-features = true }

# Platform + GPU
winit = { version = "0.30.12", default-features = true }
wgpu = "27.0.1"
pollster = "0.4.0"

# Text
ab_glyph = "0.2.31"
fontdb = "0.23.0"
cosmic-text = { version = "0.15.0", default-features = true, features = [
  "swash",
] }
android_logger = "0.15"


repose-core = { path = "crates/repose-core", version = "0.8.0" }
repose-ui = { path = "crates/repose-ui", version = "0.8.0" }
repose-material = { path = "crates/repose-material", version = "0.8.0" }
repose-canvas = { path = "crates/repose-canvas", version = "0.8.0" }
repose-navigation = { path = "crates/repose-navigation", version = "0.8.0" }
repose-devtools = { path = "crates/repose-devtools", version = "0.8.0" }
repose-text = { path = "crates/repose-text", version = "0.8.0" }
