[package]
name = "compose-core"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
inspector = []
serde = []

[dependencies]
slotmap = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
taffy.workspace = true
