[package]
name = "compose-platform"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
desktop = ["winit", "compose-render-wgpu"]

[dependencies]
compose-core = { path = "../compose-core", version = "0.1.0" }
compose-ui = { path = "../compose-ui", version = "0.1.0" }
compose-render-wgpu = { path = "../compose-render-wgpu", version = "0.1.0", optional = true }
winit = { workspace = true, optional = true }
log = { workspace = true }
anyhow = { workspace = true }
