[package]
name = "compose-platform"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
desktop = ["winit", "compose-render-wgpu", "arboard"]
android = ["winit", "compose-render-wgpu"]

[dependencies]
compose-core = { path = "../compose-core", version = "0.3.0" }
compose-ui = { path = "../compose-ui", version = "0.3.0" }
compose-render-wgpu = { path = "../compose-render-wgpu", version = "0.3.0", optional = true }
compose-devtools = { path = "../compose-devtools", version = "0.3.0" }
winit = { workspace = true, optional = true }
log = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true, optional = true }
