[package]
name = "compose-ui"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
compose-core = { path = "../compose-core", version = "0.3.0" }
compose-text = { path = "../compose-text", version = "0.3.0" }
taffy = { workspace = true }
fontdb = { workspace = true }
ab_glyph = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
insta = "1.43"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
