[package]
name = "repose-canvas"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
description = "Immediate-mode canvas utilities for Repose"
[dependencies]
repose-core = { path = "../repose-core", version = "0.7.1" }
repose-ui = { path = "../repose-ui", version = "0.7.1" }
