[package]
name = "repose-core"
version = "0.6.3"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Repose's core runtime, view model, signals, composition locals, and animation clock."
repository = { workspace = true }

[features]
inspector = []
serde = []

[dependencies]
slotmap = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
taffy.workspace = true
