[package]
name = "repose-platform"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
description = "Platform runners (desktop via winit; Android alpha)"

[features]
desktop = ["winit", "repose-render-wgpu", "arboard"]
android = ["winit/android-native-activity", "repose-render-wgpu"]

[dependencies]
repose-core = { path = "../repose-core", version = "0.7.1" }
repose-ui = { path = "../repose-ui", version = "0.7.1" }
repose-render-wgpu = { path = "../repose-render-wgpu", version = "0.7.1", optional = true }
repose-devtools = { path = "../repose-devtools", version = "0.7.1" }
winit = { workspace = true, optional = true }
log = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true, optional = true }
