[package]
name = "repose-platform"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
description = "Platform runners (desktop via winit; Android alpha)"

[features]
desktop = ["winit", "repose-render-wgpu", "arboard"]
android = ["winit/android-native-activity", "repose-render-wgpu"]

[dependencies]
repose-core.workspace = true
repose-ui.workspace = true
repose-navigation.workspace = true
repose-render-wgpu = { path = "../repose-render-wgpu", version = "0.8.3", optional = true }
repose-devtools.workspace = true
winit = { workspace = true, optional = true }
log = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true, optional = true }
