[package]
name = "repose-render-wgpu"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Repose wgpu handler"

[dependencies]
repose-core = { path = "../repose-core", version = "0.3.0" }
repose-text = { path = "../repose-text", version = "0.3.0" }
wgpu = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
ab_glyph = { workspace = true }
fontdb = { workspace = true }
bytemuck = { version = "1.23.2", features = ["derive"] }
pollster = { workspace = true }
cosmic-text = { workspace = true }
