[package]
name = "repose-render-wgpu"
version = "0.6.4"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Repose wgpu handler"

[dependencies]
repose-core = { path = "../repose-core", version = "0.6.4" }
repose-text = { path = "../repose-text", version = "0.6.4" }
wgpu = { workspace = true, features = ["gles"] }
winit = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
ab_glyph = { workspace = true }
fontdb = { workspace = true }
bytemuck = { version = "1.23.2", features = ["derive"] }
pollster = { workspace = true }
cosmic-text = { workspace = true }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
