[package]
name = "repose-render-wgpu"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
description = "Repose wgpu handler"

[dependencies]
repose-core.workspace = true
repose-text.workspace = true
wgpu = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
ab_glyph = { workspace = true }
fontdb = { workspace = true }
bytemuck = { version = "1.23.2", features = ["derive"] }
pollster = { workspace = true }
cosmic-text = { workspace = true }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
