[package]
name = "repose-text"
version = "0.7.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Text handling (wrappers around cosmic-text apis)"

[dependencies]
cosmic-text = { workspace = true }
fontdb = { workspace = true }
once_cell = "1"
ahash = "0.8"
unicode-segmentation = { workspace = true }
