[package]
name = "repose-ui"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "UI widgets and libs for Repose"

[dependencies]
repose-core = { path = "../repose-core", version = "0.3.0" }
repose-text = { path = "../repose-text", version = "0.3.0" }
taffy = { workspace = true }
fontdb = { workspace = true }
ab_glyph = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
insta = "1.43"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
