[package]
name = "repose-ui"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
description = "UI widgets and libs for Repose"

[dependencies]
repose-core.workspace = true
repose-text.workspace = true
taffy = { workspace = true }
fontdb = { workspace = true }
ab_glyph = { workspace = true }
unicode-segmentation = { workspace = true }
log.workspace = true
web-time.workspace = true

[dev-dependencies]
insta = "1.43"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
