[package]
name = "android_counter"
version = "0.3.0"
edition = "2024"
publish = false

[lib]
name = "android_counter"
crate-type = ["cdylib"]

[package.metadata.android]
package = "com.example.android_counter"
apk_name = "android_counter"
target_sdk_version = 34
min_sdk_version = 26
build_targets = ["aarch64-linux-android"]
# runtime_libs = []
split_per_abi = true

[package.metadata.android.application]
# icon = "@mipmap/ic_launcher"
label = "Repose Counter"
fullscreen = true

[dependencies]
repose-core = { path = "../../crates/repose-core", version = "0.3.0" }
repose-ui = { path = "../../crates/repose-ui", version = "0.3.0" }
repose-platform = { path = "../../crates/repose-platform", version = "0.3.0", features = [
    "android",
] }
winit = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
