[package]
name = "animation_demo"
version = "0.6.4"
edition = "2024"
publish = false
description = "Animation demo for repose"

[dependencies]
repose-core = { path = "../../crates/repose-core", version = "0.6.4" }
repose-ui = { path = "../../crates/repose-ui", version = "0.6.4" }
repose-platform = { path = "../../crates/repose-platform", version = "0.6.4", features = [
    "desktop",
] }
env_logger = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
