[package]
name = "animation_demo"
version.workspace = true
edition.workspace = true
publish = false
description = "Animation demo for repose"

[dependencies]
repose-core = { path = "../../crates/repose-core", version = "0.7.1" }
repose-ui = { path = "../../crates/repose-ui", version = "0.7.1" }
repose-platform = { path = "../../crates/repose-platform", version = "0.7.1", features = [
    "desktop",
] }
env_logger = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
