[package]
name = "animation_demo"
version.workspace = true
edition.workspace = true
publish = false
description = "Animation demo for repose"

[dependencies]
repose-core.workspace = true
repose-ui.workspace = true
repose-platform = { path = "../../crates/repose-platform", version = "0.8.3", features = [
    "desktop",
] }
env_logger = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
