[package]
name = "lazy_list"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
compose-core = { path = "../../crates/compose-core", version = "0.2.0" }
compose-ui = { path = "../../crates/compose-ui", version = "0.2.0" }
compose-platform = { path = "../../crates/compose-platform", version = "0.2.0", features = [
    "desktop",
] }
env_logger = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
