[package]
name = "showcase"
version.workspace = true
edition.workspace = true
publish = false

[lib] # Run using: cargo apk run --package showcase --lib
name = "showcase"
crate-type = ["cdylib"]

[features]
default = []
desktop-bin = []

[[bin]] # --features desktop-bin
name = "showcase-desktop"
path = "src/main.rs"
required-features = ["desktop-bin"]

[package.metadata.android]
package = "com.example.showcase"
apk_name = "showcase"
target_sdk_version = 34
min_sdk_version = 26
build_targets = ["aarch64-linux-android"]
# runtime_libs = []
split_per_abi = true

[package.metadata.android.application]
# icon = "@mipmap/ic_launcher"
label = "Recase"
fullscreen = true

[target.'cfg(target_os = "android")'.dependencies]
repose-platform = { path = "../../crates/repose-platform", version = "0.8.3", features = [
    "android",
] }
android_logger = { workspace = true }

[target.'cfg(all(not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
repose-platform = { path = "../../crates/repose-platform", version = "0.8.3", features = [
    "desktop",
] }

[dependencies]
repose-core.workspace = true
repose-ui.workspace = true
repose-material.workspace = true
repose-canvas.workspace = true
repose-navigation.workspace = true
winit = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
] }
winit = { workspace = true, features = ["rwh_05"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log.workspace = true
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wgpu = { workspace = true, features = ["webgpu", "webgl"] }
repose-platform = { workspace = true, features = ["web"] }
repose-render-wgpu.workspace = true
